Atualizado a swagger.json, rota do usuario adicionado metodo post e get
