# src/routes/UsuariosRoutes.js
@@ -5,8 +5,9 @@ const router = express.Router();
 
 // rotas para acoes usuarios
 router
-    .post("/api/logout", UsuarioController.logout)
-    .get("/api/usuarios", UsuarioController.listarUsuarios)
-    .post("/api/cadastro", UsuarioController.cadastrarUsuario)
-    .post("/api/entrar", UsuarioController.loginUsuario)
+.post("/api/usuarios/logout", UsuarioController.logout)
+.get("/api/usuarios/", UsuarioController.listarUsuarios)
+.post("/api/usuarios/cadastro", UsuarioController.cadastrarUsuario)
+.post("/api/usuarios/entrar", UsuarioController.loginUsuario)
+
 export default router;
